fix file save and btn gap issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@ html {
   box-shadow: 10px 0px 5px black !important;
 }
 
+.btn {
+  margin-right: 8px;
+}
+
 /* tab */
 .tab {
   margin-top: 30px;
